	*** RELEASE 8.2 ***

2006-11-05  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed new activation system to work on windows.
	- Fixed Marathi voices by Anand Kulkarni

	* README.mingw:
	* boards/sounds/mr/geography/about.ogg:
	* boards/sounds/mr/geography/configuration.ogg:
	* boards/sounds/mr/misc/about.ogg:
	* boards/sounds/mr/misc/configuration.ogg:
	* config.h.mingw.in:
	* configure.in:
	* src/gcompris/gcompris.c: (display_activation_dialog),
	(gc_activation_check), (activation_enter_callback):

2006-11-05  Bruno coudoin  <bruno.coudoin@free.fr>

	- Updated Indian Marathi voices by Anand Kulkarni
	  Credit goes to 'Sarvangin Vikas Sanstha'

	* boards/sounds/mr/geography/about.ogg:
	* boards/sounds/mr/geography/africa.ogg:
	* boards/sounds/mr/geography/algeria.ogg:
	* boards/sounds/mr/geography/america.ogg:
	* boards/sounds/mr/geography/angola.ogg:
	* boards/sounds/mr/geography/antartica.ogg:
	* boards/sounds/mr/geography/asia.ogg:
	* boards/sounds/mr/geography/benin.ogg:
	* boards/sounds/mr/geography/botswana.ogg:
	* boards/sounds/mr/geography/burkina.ogg:
	* boards/sounds/mr/geography/burundi.ogg:
	* boards/sounds/mr/geography/cameroon.ogg:
	* boards/sounds/mr/geography/central_african_republic.ogg:
	* boards/sounds/mr/geography/chad.ogg:
	* boards/sounds/mr/geography/configuration.ogg:
	* boards/sounds/mr/geography/congo.ogg:
	* boards/sounds/mr/geography/djibouti.ogg:
	* boards/sounds/mr/geography/egypt.ogg:
	* boards/sounds/mr/geography/equatorial_guinea.ogg:
	* boards/sounds/mr/geography/eritrea.ogg:
	* boards/sounds/mr/geography/ethiopia.ogg:
	* boards/sounds/mr/geography/europe.ogg:
	* boards/sounds/mr/geography/gabon.ogg:
	* boards/sounds/mr/geography/gambia.ogg:
	* boards/sounds/mr/geography/ghana.ogg:
	* boards/sounds/mr/geography/guinea.ogg:
	* boards/sounds/mr/geography/guinea_bissau.ogg:
	* boards/sounds/mr/geography/ivory_coast.ogg:
	* boards/sounds/mr/geography/kenya.ogg:
	* boards/sounds/mr/geography/lesotho.ogg: